# math-modelling

./: CMakeLists.txt
.ci/: ci.yaml
doc/: algorithms.dox
doc/algorithms/: implicit_heat_conduction_solver.dox
include/: implicit_heat_conduction_solver.hpp  implicit_heat_conduction_solver_impl.hpp
methods/: implicit_heat_conduction_solver_method.cpp  main.cpp  methods.hpp
python/: plot.py
python/plotters/: implicit_heat_conduction_solver.py
tests/: implicit_heat_conduction_solver_test.cpp  main.cpp  test.hpp
